[project]
name = "fit2print-solver"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "wass80", email = "wasss80@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
main = "python src/fit2print_solver/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fit2print_solver"]
